# sabbat-utilidades

./: README-EN.md  README-sabbat-analizalogs.md  README-sabbat-muestra.md  README.md  README_en.md  pyproject.toml  requirements.txt  sabbat-analizalogs  sabbat-analizalogs-en  sabbat-fileinspect.py  sabbat-loganalyce  sabbat-muestra  sabbat-muestra.sh  test_analizador.py  tree.txt
